--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "easyocr>=1.7.2",
     "faiss-cpu>=1.11.0",
     "google-generativeai>=0.8.5",
+    "gradio-client>=1.11.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "matplotlib>=3.10.3",
