--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,13 @@ dependencies = [
     "clearml>=2.0.1",
     "dataset>=1.6.2",
     "datasets>=3.6.0",
+    "dotenv>=0.9.9",
     "easyocr>=1.7.2",
     "faiss-cpu>=1.11.0",
+    "google-genai>=1.27.0",
     "google-generativeai>=0.8.5",
     "gradio-client>=1.11.0",
+    "groq>=0.30.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
     "matplotlib>=3.10.3",
